--- a/index.html
+++ b/index.html
@@ -1,60 +1,86 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+
 <head>
-<meta charset="utf-8">
-<title>Free to Use and Reuse: John Margolies Roadside America Photograph Archive API</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<link href="https://fonts.googleapis.com/css?family=Karla:400,700|Ubuntu+Mono:400" rel="stylesheet">
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-<link rel="stylesheet" href="css/style.css">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Roadside America API</title>
+    <meta name="twitter:image" content="https://dog.ceo/img/dog-api-fb.jpg">
+    <link href="https://fonts.googleapis.com/css?family=Karla:400,700|Ubuntu+Mono:400" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
+    <div class="mobile-menu">
+        <a href="index.html"><i class="fa fa-navicon"></i></a>
+    </div>
+    <div class="vertical-nav">
+        <h1>Roadside America API</h1>
+        <ul>
+            <li><a href="#">Library Of Congress Gallery</a></li>
+            <li><a href="">Flickr Gallery</a></li>
+            <li><a href="https://github.com/ElliottLandsborough/dog-ceo-api" target="" _blank><i class="fa fa-github"></i> View on GitHub</a></li>
+        </ul>
+        <span class="logo"></span>
+    </div>
+    <div class="api-side home">
+        <h1 class="title">Free to Use and Reuse: John Margolies Roadside America Photograph Archive</h1>
+        <p>Take a journey along U.S. main streets, byways, and highways through photographs taken by John Margolies between 1969 and 2008. We’ll be continuously adding images from the Margolies archive of more than 11,000 color slides.</p>
+       
+        <div class="code-wrapper">
+            <span class="code">https://roadside-america.dumbprojects.com/api</span>
+            <a href='javascript:void(0);' class='get-dog button'>Sumbit</a>
+        </div>
+        <div class="try">
+            <div class="json">
+                <h4>JSON</h4>
+                <pre></pre>
+            </div>
+        </div>
 
 
-<div class="api-side home">
-<h1 class="title">Free to Use and Reuse: John Margolies Roadside America Photograph Archive API</h1>
-<p>Take a journey along U.S. main streets, byways, and highways through photographs taken by John Margolies between 1969 and 2008. We’ll be continuously adding images from the Margolies archive of more than 11,000 color slides.</p>
-<p><a href="https://github.com/mhancoc7" target="_blank=><i class="fa fa-github"></i> View on GitHub</a></p>
-<div class="code-wrapper">
-<span class="code">https://roadside-america.dumbprojects.com/api</span>
-<a href='javascript:void(0);' class='get-image button'>Submit</a>
-</div>
-<div class="try">
-<div class="json">
-<h4>JSON</h4>
-<pre></pre>
-</div>
-<div class="image">
-<h4>Image</h4>
-<div class="image-content">
-</div>
-</div>
-</div>
+    </div>
+    <script>
+        (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
+        ga('create', 'UA-98107378-1', 'auto');
+        ga('send', 'pageview');
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-<script>
-if (typeof jQuery == 'undefined') {
-    document.write(unescape("%3Cscript src='/js/vendor/jquery-3.4.1.min.js' type='text/javascript'%3E%3C/script%3E"));
-}
-</script>
-<script>
-        function getImage(){
-            $.getJSON("api/index.php", function( data ) {
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script>
+        if (typeof jQuery == 'undefined') {
+            document.write(unescape("%3Cscript src='/js/vendor/jquery-3.4.1.min.js' type='text/javascript'%3E%3C/script%3E"));
+        }
+    </script>
+    <script src="https://dog.ceo/js/main.js"></script>
+    <script>
+
+        function getLogo() {
+            $.getJSON("api/index.php", function (data) {
                 $(".json pre").html(JSON.stringify(data, null, 4));
-                $(".image-content").html("<img src='" + data.results.images.full + "'>");
+                $(".logo").html("<img src='" + data.results.images.full + "' style='max-width: 100%; margin-top: 1.5em;'>");
             });
         }
-        $('.get-image').click(function(){
-            getImage();
+
+        $('.get-dog').click(function () {
+            getLogo();
         });
 
-        $(document).ready(function() {
-            getImage();
+        $(document).ready(function () {
+            getLogo();
         });
 
     </script>
 </body>
+
 </html>
