--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
        
         <div class="code-wrapper">
             <span class="code">https://roadside-america.dumbprojects.com/api</span>
-            <a href='javascript:void(0);' class='get-dog button'>Sumbit</a>
+            <a href='javascript:void(0);' class='get-dog button'>Submit</a>
         </div>
         <div class="try">
             <div class="json">
