--- a/index.html
+++ b/index.html
@@ -82,8 +82,10 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
             var x = document.getElementById("main-content");
             if (x.style.display === "none") {
                 x.style.display = "block";
+                document.body.style.backgroundColor = "#fff";
             } else {
                 x.style.display = "none";
+                document.body.style.backgroundColor = "#eee";
             }
         }
 
