--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
         <a href="index.html"><i class="fa fa-navicon"></i></a>
     </div>
     <div class="vertical-nav">
+        <h1>Roadside America API</h1>
         <ul>
             <li><a href="https://www.loc.gov/free-to-use/john-margolies-roadside-america-photograph-archive" target="_blank"><i class="fa fa-book"></i>  &nbsp;Library Of Congress Gallery</a></li>
             <li><a href="https://www.flickr.com/photos/library_of_congress/albums/72157686396348231" target="_blank"><i class="fa fa-flickr"></i>  &nbsp;Flickr Gallery</a></li>
