--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
             <a href='javascript:void(0);' class='get-image button'>Submit</a>
         </div>
         <div class="try">
-            <div class="json">
-                <h4>JSON</h4>
-                <pre></pre>
-            </div>
 
             <div class="image">
                 <h4>Image</h4>
-                <div class="image-content">
-                </div>
+                <div class="image-content"></div>
+            </div>
+
+            <div class="json">
+                <h4>JSON</h4>
+                <pre></pre>
             </div>
         </div>
 
