--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
         </ul>
         <span class="logo"></span>
         <ul>
-            <li>Powered By: <a href="https://www.loc.gov/free-to-use/" target="_blank"><img src="images/logo-loc-new-branding.svg" /></a></li>
+            <li>Powered By: <a href="https://www.loc.gov/free-to-use/" target="_blank"><img class="powered-by" src="images/logo-loc-new-branding.svg" /></a></li>
         </ul>
     </div>
     <div id ="main-content" class="api-side home">
@@ -92,9 +92,10 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
             }
         }
 
-        $('.mobile-menu').click(function () {
-            mobileMenu();
-        });
+        // $('.mobile-menu').click(function () {
+        //     mobileMenu();
+        // });
+        
 
         $(".mobile-menu").click(function(e){e.preventDefault();$(".vertical-nav").toggleClass("active");});$(".vertical-nav ul a").click(function(e){$(".vertical-nav").removeClass("active");});
 
