--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
             }
         }
 
-        // $('.mobile-menu').click(function () {
-        //     mobileMenu();
-        // });
+        $('.mobile-menu').click(function () {
+            mobileMenu();
+        });
         
 
         $(".mobile-menu").click(function(e){e.preventDefault();$(".vertical-nav").toggleClass("active");});$(".vertical-nav ul a").click(function(e){$(".vertical-nav").removeClass("active");});
