--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
     <div class="vertical-nav">
         <h1>Roadside America API</h1>
         <ul>
-            <li><a href="https://www.loc.gov/free-to-use/john-margolies-roadside-america-photograph-archive" target="_blank"><i class="fa fa-book"></i>  &nbsp;Library Of Congress Gallery</a></li>
-            <li><a href="https://www.flickr.com/photos/library_of_congress/albums/72157686396348231" target="_blank"><i class="fa fa-flickr"></i>  &nbsp;Flickr Gallery</a></li>
-            <li><a href="https://dumbprojects.com" target="_blank"><i class="fa fa-smile-o"></i>  &nbsp;More Dumb Projects</a></li>
-            <li><a href="https://github.com/mhancoc7/Roadside-America-API" target="_blank"><i class="fa fa-github"></i>  &nbsp;View on GitHub</a></li>
+            <li><a href="https://www.loc.gov/free-to-use/john-margolies-roadside-america-photograph-archive"><i class="fa fa-book"></i>  &nbsp;Library Of Congress Gallery</a></li>
+            <li><a href="https://www.flickr.com/photos/library_of_congress/albums/72157686396348231"><i class="fa fa-flickr"></i>  &nbsp;Flickr Gallery</a></li>
+            <li><a href="https://dumbprojects.com"><i class="fa fa-smile-o"></i>  &nbsp;More Dumb Projects</a></li>
+            <li><a href="https://github.com/mhancoc7/Roadside-America-API"><i class="fa fa-github"></i>  &nbsp;View on GitHub</a></li>
         </ul>
         <span class="logo"></span>
         <ul>
-            <li>Powered By: <a href="https://www.loc.gov/free-to-use/" target="_blank"><img class="powered-by" src="images/logo-loc-new-branding.svg" /></a></li>
+            <li>Powered By: <a href="https://www.loc.gov/free-to-use/"><img class="powered-by" src="images/logo-loc-new-branding.svg" /></a></li>
         </ul>
     </div>
     <div id ="main-content" class="api-side home">
