--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Roadside America API</title>
-    <link href="https://fonts.googleapis.com/css?family=Karla:400,700|Ubuntu+Mono:400" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Roadside America API">
+    <meta property="og:title" content="Free to Use and Reuse: John Margolies Roadside America Photograph Archive" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Free to Use and Reuse: John Margolies Roadside America Photograph Archive" />
+    <meta property="og:url" content="https://roadside-america.dumbprojects.com" />
+    <meta property="og:image" content="images/roadside-america.jpg" />
+    <meta property="og:site_name" content="roadside-america.dumbprojects.com" />
+    <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="images/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="images/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
+    <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
@@ -25,15 +46,15 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
             <li><a href="https://dumbprojects.com"><i class="fa fa-smile-o"></i>  &nbsp;More Dumb Projects</a></li>
             <li><a href="https://github.com/mhancoc7/Roadside-America-API"><i class="fa fa-github"></i>  &nbsp;View on GitHub</a></li>
         </ul>
-        <span class="logo"></span>
+        <span class="logo"><img src="images/roadside-america.jpg" style="max-width: 100%; margin-bottom: 1.5em;""></span>
         <ul>
-            <li>Powered By: <a href="https://www.loc.gov/free-to-use/"><img class="powered-by" src="images/logo-loc-new-branding.svg" /></a></li>
+            <li>Powered By: <a href="https://www.loc.gov/free-to-use/"><img class="powered-by" src="images/logo-loc-new-branding.svg" alt="Library of Congress" /></a></li>
         </ul>
     </div>
     <div id ="main-content" class="api-side home">
         <h1 class="mobile-h1">Roadside America API</h1>
         <h2 class="title">Free to Use and Reuse: John Margolies Roadside America Photograph Archive</h2>
-        <p>Take a journey along U.S. main streets, byways, and highways through photographs taken by John Margolies between 1969 and 2008. We’ll be continuously adding images from the Margolies archive of more than 11,000 color slides.</p>
+        <p>Take a journey along U.S. main streets, byways, and highways through photographs taken by John Margolies between 1969 and 2008. We'll be continuously adding images from the Margolies archive of more than 11,000 color slides.</p>
        
         <div class="code-wrapper">
             <span class="code">https://roadside-america.dumbprojects.com/api</span>
@@ -52,6 +73,16 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
             </div>
         </div>
 
+    </div>
+
+    <div id="social">
+        <!-- AddToAny BEGIN -->
+        <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+            <a class="a2a_button_facebook"></a>
+            <a class="a2a_button_twitter"></a>
+        </div>
+        <script src="//static.addtoany.com/menu/page.js"></script>
+        <!-- AddToAny END -->
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
@@ -77,7 +108,6 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
             getImage();
             $.getJSON("api/index.php", function (data) {
                 $(".json pre").html(JSON.stringify(data, null, 4));
-                $(".logo").html("<img src='" + data.results.images.full + "' style='max-width: 100%; margin-bottom: 1.5em;'>");
             });
         });
 
