--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Roadside America API</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Roadside America API">
     <meta property="og:title" content="Free to Use and Reuse: John Margolies Roadside America Photograph Archive" />
@@ -46,7 +47,7 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
             <li><a href="https://dumbprojects.com"><i class="fa fa-smile-o"></i>  &nbsp;More Dumb Projects</a></li>
             <li><a href="https://github.com/mhancoc7/Roadside-America-API"><i class="fa fa-github"></i>  &nbsp;View on GitHub</a></li>
         </ul>
-        <span class="logo"><img src="images/roadside-america.jpg" style="max-width: 100%; margin-bottom: 1.5em;""></span>
+        <span class="logo"><img src="images/roadside-america.jpg" style="max-width: 100%; margin-bottom: 1.5em;"></span>
         <ul>
             <li>Powered By: <a href="https://www.loc.gov/free-to-use/"><img class="powered-by" src="images/logo-loc-new-branding.svg" alt="Library of Congress" /></a></li>
         </ul>
