--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
         <p>Take a journey along U.S. main streets, byways, and highways through photographs taken by John Margolies between 1969 and 2008. We'll be continuously adding images from the Margolies archive of more than 11,000 color slides.</p>
        
         <div class="code-wrapper">
-            <span class="code">https://roadside-america.dumbprojects.com/api</span>
+            <pre class="code">https://roadside-america.dumbprojects.com/api</pre>
             <a href='javascript:void(0);' class='get-image button'>Submit</a>
         </div>
         <div class="try">
