--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Roadside America API</title>
     <meta charset="utf-8">
@@ -7,7 +8,8 @@
     <meta name="description" content="Roadside America API">
     <meta property="og:title" content="Roadside America API" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Free to Use and Reuse: John Margolies Roadside America Photograph Archive" />
+    <meta property="og:description"
+        content="Free to Use and Reuse: John Margolies Roadside America Photograph Archive" />
     <meta property="og:url" content="https://roadside-america.dumbprojects.com" />
     <meta property="og:image" content="images/roadside-america.jpg" />
     <meta property="og:site_name" content="roadside-america.dumbprojects.com" />
@@ -20,7 +22,7 @@
     <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="images/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="images/favicon/android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
@@ -31,7 +33,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -42,21 +44,28 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
     <div class="vertical-nav">
         <h1>Roadside America API</h1>
         <ul>
-            <li><a href="https://www.loc.gov/free-to-use/john-margolies-roadside-america-photograph-archive"><i class="fa fa-book"></i>  &nbsp;Library Of Congress Gallery</a></li>
-            <li><a href="https://www.flickr.com/photos/library_of_congress/albums/72157686396348231"><i class="fa fa-flickr"></i>  &nbsp;Flickr Gallery</a></li>
-            <li><a href="https://dumbprojects.com"><i class="fa fa-smile-o"></i>  &nbsp;More Dumb Projects</a></li>
-            <li><a href="https://github.com/mhancoc7/Roadside-America-API"><i class="fa fa-github"></i>  &nbsp;View on GitHub</a></li>
+            <li><a href="https://www.loc.gov/free-to-use/john-margolies-roadside-america-photograph-archive"><i
+                        class="fa fa-book"></i> &nbsp;Library Of Congress Gallery</a></li>
+            <li><a href="https://www.flickr.com/photos/library_of_congress/albums/72157686396348231"><i
+                        class="fa fa-flickr"></i> &nbsp;Flickr Gallery</a></li>
+            <li><a href="https://dumbprojects.com"><i class="fa fa-smile-o"></i> &nbsp;More Dumb Projects</a></li>
+            <li><a href="https://github.com/mhancoc7/Roadside-America-API"><i class="fa fa-github"></i> &nbsp;View on
+                    GitHub</a></li>
         </ul>
-        <span class="logo"><img src="images/roadside-america.jpg" alt="Roadside America" style="max-width: 100%; margin-bottom: 1.5em;" /></span>
+        <span class="logo"><img src="images/roadside-america.jpg" alt="Roadside America"
+                style="max-width: 100%; margin-bottom: 1.5em;" /></span>
         <ul>
-            <li>Powered By: <a href="https://www.loc.gov/free-to-use/"><img class="powered-by" src="images/logo-loc-new-branding.svg" alt="Library of Congress" /></a></li>
+            <li>Powered By: <a href="https://www.loc.gov/free-to-use/"><img class="powered-by"
+                        src="images/logo-loc-new-branding.svg" alt="Library of Congress" /></a></li>
         </ul>
     </div>
-    <div id ="main-content" class="api-side home">
+    <div id="main-content" class="api-side home">
         <h1 class="mobile-h1">Roadside America API</h1>
         <h2 class="title">Free to Use and Reuse: John Margolies Roadside America Photograph Archive</h2>
-        <p>Take a journey along U.S. main streets, byways, and highways through photographs taken by John Margolies between 1969 and 2008. We'll be continuously adding images from the Margolies archive of more than 11,000 color slides.</p>
-       
+        <p>Take a journey along U.S. main streets, byways, and highways through photographs taken by John Margolies
+            between 1969 and 2008. We'll be continuously adding images from the Margolies archive of more than 11,000
+            color slides.</p>
+
         <div class="code-wrapper">
             <pre class="code">https://roadside-america.dumbprojects.com/api</pre>
             <a href='javascript:void(0);' class='get-image button'>Submit</a>
@@ -126,11 +135,27 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
         $('.mobile-menu').click(function () {
             mobileMenu();
         });
-        
 
-        $(".mobile-menu").click(function(e){e.preventDefault();$(".vertical-nav").toggleClass("active");});$(".vertical-nav ul a").click(function(e){$(".vertical-nav").removeClass("active");});
+
+        $(".mobile-menu").click(function (e) { e.preventDefault(); $(".vertical-nav").toggleClass("active"); }); $(".vertical-nav ul a").click(function (e) { $(".vertical-nav").removeClass("active"); });
 
     </script>
+
+    <!-- Default Statcounter code for Roadside America (Site) https://roadside-america.dumbprojects.com/ -->
+    <script>
+        var sc_project = 12101527;
+        var sc_invisible = 1;
+        var sc_security = "93e2582a"; 
+    </script>
+    <script src="https://www.statcounter.com/counter/counter.js" async></script>
+    <noscript>
+        <div class="statcounter">
+            <a title="Web Analytics Made Easy - StatCounter" href="https://statcounter.com/" target="_blank">
+                <img class="statcounter"src="https://c.statcounter.com/12101527/0/93e2582a/1/" alt="Web Analytics Made Easy -StatCounter">
+            </a>
+        </div>
+    </noscript>
+    <!-- End of Statcounter Code -->
 </body>
 
 </html>
