updated twitter image

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Roadside America API">
+    <meta name="twitter:image" content="images/roadside-america.jpg" />
     <meta property="og:title" content="Roadside America API" />
     <meta property="og:type" content="website" />
-    <meta property="og:description"
-        content="Free to Use and Reuse: John Margolies Roadside America Photograph Archive" />
+    <meta property="og:description" content="Free to Use and Reuse: John Margolies Roadside America Photograph Archive" />
     <meta property="og:url" content="https://roadside-america.dumbprojects.com" />
     <meta property="og:image" content="images/roadside-america.jpg" />
     <meta property="og:site_name" content="roadside-america.dumbprojects.com" />
