--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
         <h1 class="mobile-h1">Roadside America API</h1>
         <h2 class="title">Free to Use and Reuse: John Margolies Roadside America Photograph Archive</h2>
         <p>Take a journey along U.S. main streets, byways, and highways through photographs taken by John Margolies
-            between 1969 and 2008. We'll be continuously adding images from the Margolies archive of more than 11,000
-            color slides.</p>
+            between 1969 and 2008. The archive consists of more than 11,000 color slides.</p>
 
         <div class="code-wrapper">
             <pre class="code">https://roadside-america.dumbprojects.com/api</pre>
