Added new demo site

--- a/index.html
+++ b/index.html
@@ -44,19 +44,15 @@
     <div class="vertical-nav">
         <h1>Roadside America API</h1>
         <ul>
-            <li><a href="https://www.loc.gov/free-to-use/john-margolies-roadside-america-photograph-archive"><i
-                        class="fa fa-book"></i> &nbsp;Library Of Congress Gallery</a></li>
-            <li><a href="https://www.flickr.com/photos/library_of_congress/albums/72157686396348231"><i
-                        class="fa fa-flickr"></i> &nbsp;Flickr Gallery</a></li>
+            <li><a href="https://www.loc.gov/free-to-use/john-margolies-roadside-america-photograph-archive"><i class="fa fa-book"></i> &nbsp;Library Of Congress Gallery</a></li>
+            <li><a href="https://www.flickr.com/photos/library_of_congress/albums/72157686396348231"><i class="fa fa-flickr"></i> &nbsp;Flickr Gallery</a></li>
             <li><a href="https://dumbprojects.com"><i class="fa fa-smile-o"></i> &nbsp;More Dumb Projects</a></li>
-            <li><a href="https://github.com/mhancoc7/Roadside-America-API"><i class="fa fa-github"></i> &nbsp;View on
-                    GitHub</a></li>
+            <li><a href="demo/"><i class="fa fa-info"></i> &nbsp;API Demo</a></li>
+            <li><a href="https://github.com/mhancoc7/Roadside-America-API"><i class="fa fa-github"></i> &nbsp;View on GitHub</a></li>
         </ul>
-        <span class="logo"><img src="images/roadside-america.jpg" alt="Roadside America"
-                style="max-width: 100%; margin-bottom: 1.5em;" /></span>
+        <span class="logo"><img src="images/roadside-america.jpg" alt="Roadside America" style="max-width: 100%; margin-bottom: 1.5em;" /></span>
         <ul>
-            <li>Powered By: <a href="https://www.loc.gov/free-to-use/"><img class="powered-by"
-                        src="images/logo-loc-new-branding.svg" alt="Library of Congress" /></a></li>
+            <li>Powered By: <a href="https://www.loc.gov/free-to-use/"><img class="powered-by" src="images/logo-loc-new-branding.svg" alt="Library of Congress" /></a></li>
         </ul>
     </div>
     <div id="main-content" class="api-side home">
