--- a/demo/index.html
+++ b/demo/index.html
@@ -57,7 +57,7 @@
 			<!-- AddToAny END -->
 		</div>
 
-		<div id="built-with">Powered by: <a href="https://roadside-america.dumbprojects.com/" target="_blank">Roadside America API</a></div>
+		<div id="built-with">Powered by: <a href="https://roadside-america.dumbprojects.com/">Roadside America API</a></div>
 
 		<script>
 			// Get random picture from Roadside America API: https://roadside-america.dumbprojects.com/
