--- a/demo/index.html
+++ b/demo/index.html
@@ -30,7 +30,7 @@
 		<meta name="msapplication-TileColor" content="#ffffff">
 		<meta name="msapplication-TileImage" content="../images/favicon/ms-icon-144x144.png">
 		<link href="css/style.css" rel="stylesheet" />
-		<link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
 	</head>
 
 	<body onload="getImage();">
