--- a/demo/index.html
+++ b/demo/index.html
@@ -5,12 +5,12 @@
 		<meta charset="utf-8" />
 		<title>Roadside America API Demo</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Roadside America API">
+		<meta name="description" content="Roadside America API Demo">
 		<meta name="twitter:image" content="https://roadside-america.dumbprojects.com/images/roadside-america-twitter.jpg" />
-		<meta property="og:title" content="Roadside America API" />
+		<meta property="og:title" content="Roadside America API Demo" />
 		<meta property="og:type" content="website" />
 		<meta property="og:description" content="Free to Use and Reuse: John Margolies Roadside America Photograph Archive" />
-		<meta property="og:url" content="https://roadside-america.dumbprojects.com" />
+		<meta property="og:url" content="https://roadside-america.dumbprojects.com/demo/" />
 		<meta property="og:image" content="images/roadside-america.jpg" />
 		<meta property="og:site_name" content="roadside-america.dumbprojects.com" />
 		<link rel="apple-touch-icon" sizes="57x57" href="../images/favicon/apple-icon-57x57.png">
