updated for API changes

--- a/demo/index.html
+++ b/demo/index.html
@@ -70,8 +70,8 @@
 						document.title = data.results.title;
 						document.getElementById("title").innerHTML = data.results.title;
 						document.getElementById("mobile-title").innerHTML = data.results.title;
-						document.getElementById("tv").style.backgroundImage = "url('images/tv.png'), url('images/overlay.png'), url('" + data.results.images.full + "')";
-						document.getElementById("mobile").style.backgroundImage = "url('images/overlay.png'), url('" + data.results.images.full + "')";
+						document.getElementById("tv").style.backgroundImage = "url('images/tv.png'), url('images/overlay.png'), url('" + data.results.images.large + "')";
+						document.getElementById("mobile").style.backgroundImage = "url('images/overlay.png'), url('" + data.results.images.large + "')";
 					})
 					.catch(err => {
 						document.title = "Roadside America API Demo";
