updated with new site and twitter

--- a/index.html
+++ b/index.html
@@ -44,15 +44,16 @@
     <div class="vertical-nav">
         <h1>Roadside America API</h1>
         <ul>
-            <li><a href="https://www.loc.gov/free-to-use/john-margolies-roadside-america-photograph-archive"><i class="fa fa-book"></i> &nbsp;Library Of Congress Gallery</a></li>
-            <li><a href="https://www.flickr.com/photos/library_of_congress/albums/72157686396348231"><i class="fa fa-flickr"></i> &nbsp;Flickr Gallery</a></li>
-            <li><a href="demo/"><i class="fa fa-info-circle"></i> &nbsp;API Demo</a></li>
-            <li><a href="https://github.com/mhancoc7/Roadside-America-API"><i class="fa fa-github"></i> &nbsp;View on GitHub</a></li>
-            <li><a href="https://dumbprojects.com"><i class="fa fa-smile-o"></i> &nbsp;More Dumb Projects</a></li>
+            <li><a href="https://www.loc.gov/free-to-use/john-margolies-roadside-america-photograph-archive" target="_blank" rel="noreferrer noopener"><i class="fa fa-book"></i> &nbsp;Library Of Congress Gallery</a></li>
+            <li><a href="https://www.flickr.com/photos/library_of_congress/albums/72157686396348231" target="_blank" rel="noreferrer noopener"><i class="fa fa-flickr"></i> &nbsp;Flickr Gallery</a></li>
+            <li><a href="https://roadsideamerica.us" target="_blank" rel="noreferrer noopener"><i class="fa fa-info-circle"></i> &nbsp;Roadside America Site</a></li>
+            <li><a href="https://twitter.com/RdSd_America_US" target="_blank" rel="noreferrer noopener"><i class="fa fa-twitter"></i> &nbsp;Follow Us On Twitter</a></li>
+            <li><a href="https://github.com/mhancoc7/Roadside-America-API" target="_blank" rel="noreferrer noopener"><i class="fa fa-github"></i> &nbsp;View on GitHub</a></li>
+            <li><a href="https://dumbprojects.com"><i class="fa fa-smile-o" target="_blank" rel="noreferrer noopener"></i> &nbsp;More Dumb Projects</a></li>
         </ul>
         <span class="logo"><img src="images/roadside-america.jpg" alt="Roadside America" style="max-width: 100%; margin-bottom: 1.5em;" /></span>
         <ul>
-            <li>Powered By: <a href="https://www.loc.gov/free-to-use/"><img class="powered-by" src="images/logo-loc-new-branding.svg" alt="Library of Congress" /></a></li>
+            <li>Powered By: <a href="https://www.loc.gov/free-to-use/" target="_blank" rel="noreferrer noopener"><img class="powered-by" src="images/logo-loc-new-branding.svg" alt="Library of Congress" /></a></li>
         </ul>
     </div>
     <div id="main-content" class="api-side home">
