--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <ul>
             <li><a href="https://www.loc.gov/free-to-use/john-margolies-roadside-america-photograph-archive"><i class="fa fa-book" target="_blank" rel="noreferrer noopener"></i> &nbsp;Library Of Congress Gallery</a></li>
             <li><a href="https://www.flickr.com/photos/library_of_congress/albums/72157686396348231"><i class="fa fa-flickr" target="_blank" rel="noreferrer noopener"></i> &nbsp;Flickr Gallery</a></li>
-            <li><a href="https://roadsideamerica.us"><i class="fa fa-browser" target="_blank" rel="noreferrer noopener"></i> &nbsp;Roadside America Site</a></li>
+            <li><a href="https://roadsideamerica.us"><i class="fa fa-globe" target="_blank" rel="noreferrer noopener"></i> &nbsp;Roadside America Site</a></li>
             <li><a href="https://twitter.com/RdSd_America_US"><i class="fa fa-twitter" target="_blank" rel="noreferrer noopener"></i> &nbsp;Follow Us On Twitter</a></li>
             <li><a href="https://github.com/mhancoc7/Roadside-America-API"><i class="fa fa-github" target="_blank" rel="noreferrer noopener"></i> &nbsp;View on GitHub</a></li>
             <li><a href="https://dumbprojects.com"><i class="fa fa-smile-o" target="_blank" rel="noreferrer noopener"></i> &nbsp;More Dumb Projects</a></li>
