--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <ul>
             <li><a href="https://www.loc.gov/free-to-use/john-margolies-roadside-america-photograph-archive"><i class="fa fa-book"></i> &nbsp;Library Of Congress Gallery</a></li>
             <li><a href="https://www.flickr.com/photos/library_of_congress/albums/72157686396348231"><i class="fa fa-flickr"></i> &nbsp;Flickr Gallery</a></li>
+            <li><a href="https://roadside-america.dumbprojects.com/demo/"><i class="fa fa-globe"></i> &nbsp;Demo Site</a></li>
             <li><a href="https://github.com/mhancoc7/Roadside-America-API"><i class="fa fa-github"></i> &nbsp;View on GitHub</a></li>
         </ul>
         <span class="logo"><img src="images/roadside-america.jpg" alt="Roadside America" style="max-width: 100%; margin-bottom: 1.5em;" /></span>
