--- a/index.html
+++ b/index.html
@@ -44,13 +44,15 @@
     <div class="vertical-nav">
         <h1>Roadside America API</h1>
         <ul>
-            <li><a href="https://www.loc.gov/free-to-use/john-margolies-roadside-america-photograph-archive"><i
-                        class="fa fa-book"></i> &nbsp;Library Of Congress Gallery</a></li>
-            <li><a href="https://www.flickr.com/photos/library_of_congress/albums/72157686396348231"><i
+            <li><a href="https://www.loc.gov/free-to-use/john-margolies-roadside-america-photograph-archive"
+                    target="_blank"><i class="fa fa-book"></i> &nbsp;Library Of Congress Gallery</a></li>
+            <li><a href="https://www.flickr.com/photos/library_of_congress/albums/72157686396348231" target="_blank"><i
                         class="fa fa-flickr"></i> &nbsp;Flickr Gallery</a></li>
-            <li><a href="https://roadside-america.dumbprojects.com/demo/"><i class="fa fa-globe"></i> &nbsp;Demo
+            <li><a href="https://roadside-america.dumbprojects.com/demo/" target="_blank"><i class="fa fa-globe"></i>
+                    &nbsp;Demo
                     Site</a></li>
-            <li><a href="https://github.com/mhancoc7/Roadside-America-API"><i class="fa fa-github"></i> &nbsp;View on
+            <li><a href="https://github.com/mhancoc7/Roadside-America-API" target="_blank"><i class="fa fa-github"></i>
+                    &nbsp;View on
                     GitHub</a></li>
         </ul>
         <span class="logo"><img src="images/roadside-america.jpg" alt="Roadside America"
