--- a/index.html
+++ b/index.html
@@ -84,16 +84,21 @@
     </div>
 
     <div id="social">
-        <!-- AddToAny BEGIN -->
-        <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
-            <a class="a2a_button_facebook"></a>
-            <a class="a2a_button_twitter"></a>
-        </div>
-        <script async src="//static.addtoany.com/menu/page.js"></script>
-        <!-- AddToAny END -->
+        <a href="https://dumbprojects.com" target="_blank"
+            style="display: inline-block; padding: 10px 20px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; text-decoration: none; border-radius: 5px; font-weight: bold; font-family: 'Karla', sans-serif; transition: transform 0.2s;">
+            More Dumb Projects
+        </a>
     </div>
 
     <script>
+        // Add hover effect to the link
+        document.querySelector('#social a').addEventListener('mouseenter', function () {
+            this.style.transform = 'scale(1.05)';
+        });
+        document.querySelector('#social a').addEventListener('mouseleave', function () {
+            this.style.transform = 'scale(1)';
+        });
+
         // Fetch and display image data
         function getImage() {
             // Show loading indicator
